# python-automations

./: pyproject.toml
.github/workflows/: python-app.yml
gh_actions_lessons/: main.py
gh_actions_lessons/chains/: extract_content.py
tests/: test_main.py
